Squashed commit of the following:
This branch focused changes required due to merging bel_lang, bel_nanopub and bel_db into the bel python package and carried along significant documentation updates.

commit 436a36557c82f8d3e14e494a0dde99343445eb3b
Author: William Hayes <william.s.hayes@gmail.com>
Date:   Sun Jan 7 20:25:17 2018 -0500

    cleanup

commit 771d7381bf5c493e34d104193844235e9275c1fb
Author: William Hayes <william.s.hayes@gmail.com>
Date:   Sun Jan 7 20:23:35 2018 -0500

    Added ortholog endpoint

commit 60d3dd0f65552438e1902af7800deeaf54924cf9
Author: William Hayes <william.s.hayes@gmail.com>
Date:   Sat Jan 6 22:15:29 2018 -0500

    better documentation and cleanup

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -27,28 +27,30 @@ services:
     # network_mode: "host"
 
 
-  # BEL API - core requirement
-  bel_api:
-    container_name: bel_api
-    image: bel_api:latest
-    build:
-      context: .
-      dockerfile: Dockerfile-bel_api
-    ports:
-      - "8010:8000"
-    # depends_on:
-    #   - bel_elasticsearch
-    #   - bel_arangodb
-    volumes:
-      - ./api:/app
-    labels:
-      - traefik.enable=true
-      - traefik.backend=bel_api
-      - traefik.frontend.rule=Host:belapi.test;PathPrefixStrip:/v1
-      - traefik.port=8000
-    environment:
-      - SERVER_MODE=DEV
-    restart: always
+  # # BEL API - core requirement
+  # bel_api:
+  #   container_name: bel_api
+  #   image: bel_api:latest
+  #   build:
+  #     context: ..
+  #     dockerfile: ./docker/Dockerfile-bel_api
+  #   ports:
+  #     - "8010:8000"
+  #   # depends_on:
+  #   #   - bel_elasticsearch
+  #   #   - bel_arangodb
+  #   volumes:
+  #     - ../api:/app
+  #     - ./belbio_conf.yml:/app/belbio_conf.yml
+  #     - ./belbio_secrets.yml:/app/belbio_secrets.yml
+  #   labels:
+  #     - traefik.enable=true
+  #     - traefik.backend=bel_api
+  #     - traefik.frontend.rule=Host:belapi.test;PathPrefixStrip:/v1
+  #     - traefik.port=8000
+  #   environment:
+  #     - SERVER_MODE=DEV
+  #   restart: always
 
 
 #  ArangoDB and ElasticSearch are setup on api.openbel.org
@@ -65,78 +67,74 @@ services:
 #   IdentityFile ~/.ssh/ads-pmi-admin1.pem
 
 
-  # # ArangoDB - document/graph store - core requirement
-  # # http://localhost:8529
-  # bel_arangodb:
-  #   container_name: bel_arangodb
-  #   image: arangodb:3.1.21
-  #   ports:
-  #     - "8529:8529"
-  #   volumes:
-  #     - bel_arango_data:/var/lib/arangodb3
-  #   labels:
-  #     - traefik.enable=true
-  #     - traefik.backend=bel_arangodb
-  #     - traefik.frontend.rule=Host:arangodb.belapi.test
-  #     - traefik.port=8529
-  #   environment:
-  #     - ARANGO_NO_AUTH=1
-  #   restart: always
+  # ArangoDB - document/graph store - core requirement
+  # http://localhost:8529
+  bel_arangodb:
+    container_name: bel_arangodb
+    image: arangodb:3.2.9
+    ports:
+      - "8529:8529"
+    volumes:
+      - bel_arango_data:/var/lib/arangodb3
+    labels:
+      - traefik.enable=true
+      - traefik.backend=bel_arangodb
+      - traefik.frontend.rule=Host:arangodb.belapi.test
+      - traefik.port=8529
+    environment:
+      - ARANGO_NO_AUTH=1
+    restart: always
 
-  # # Elasticsearch - terminology search - core requirement
-  # # http://localhost:9200
-  # bel_elasticsearch:
-  #   container_name: bel_elasticsearch
-  #   # image: itzg/elasticsearch:5.1.2
-  #   image: docker.elastic.co/elasticsearch/elasticsearch:5.4.3  # dies before fully launching
-  #   ports:
-  #     - "9210:9200"
-  #   volumes:
-  #     - bel_elasticsearch_data:/usr/share/elasticsearch/data
-  #     - ./elasticsearch.yml:/conf/elasticsearch.yml
-  #   # logging:
-  #   #   driver: none
-  #   environment:
-  #     - cluster.name=docker-cluster
-  #     - bootstrap.memory_lock=true
-  #     - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-  #     - xpack.security.enabled=false
-  #     - xpack.watcher.enabled=false
-  #   ulimits:
-  #     memlock:
-  #       soft: -1
-  #       hard: -1
-  #   # deploy:
-  #   #   resources:
-  #   #     limits:
-  #   #       memory: 1g
-  #   restart: always
+  # Elasticsearch - terminology search - core requirement
+  # http://localhost:9200
+  bel_elasticsearch:
+    container_name: bel_elasticsearch
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.1.0
+    ports:
+      - "9200:9200"
+    volumes:
+      - bel_elasticsearch_data:/usr/share/elasticsearch/data
+      - ./elasticsearch.yml:/conf/elasticsearch.yml
+    # logging:
+    #   driver: none
+    environment:
+      - cluster.name=docker-cluster
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - xpack.security.enabled=false
+      - xpack.watcher.enabled=false
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    # deploy:
+    #   resources:
+    #     limits:
+    #       memory: 1g
+    restart: always
 
 
-  # Running on api.openbel.org server -- https://kibana.bel.bio
-
-  # # Optional for viewing Elasticsearch terminology search service
-  # # http://localhost:5601
-  # bel_kibana:
-  #   container_name: bel_kibana
-  #   # image: kibana:5.1.2
-  #   image: docker.elastic.co/kibana/kibana:5.4.3  # must match elasticsearch image
-  #   ports:
-  #     - 5611:5601
-  #   volumes:
-  #     - bel_kibana_data:/usr/share/kibana/data
-  #   labels:
-  #     - traefik.enable=true
-  #     - traefik.backend=kibana
-  #     - traefik.frontend.rule=Host:kibana.belapi.test
-  #     - traefik.port=5601
-  #   depends_on:
-  #     - bel_elasticsearch
-  #   environment:
-  #     - ELASTICSEARCH_URL=http://bel_elasticsearch:9200
-  #     - xpack.security.enabled=false
-  #   # logging:
-  #   #   driver: none
-  #   restart: always
+  # Optional for viewing Elasticsearch terminology search service
+  # http://localhost:5601
+  bel_kibana:
+    container_name: bel_kibana
+    image: docker.elastic.co/kibana/kibana:6.1.0
+    ports:
+      - 5601:5601
+    volumes:
+      - bel_kibana_data:/usr/share/kibana/data
+    labels:
+      - traefik.enable=true
+      - traefik.backend=kibana
+      - traefik.frontend.rule=Host:kibana.belapi.test
+      - traefik.port=5601
+    depends_on:
+      - bel_elasticsearch
+    environment:
+      - ELASTICSEARCH_URL=http://bel_elasticsearch:9200
+      - xpack.security.enabled=false
+    # logging:
+    #   driver: none
+    restart: always
 
 
