--- a/docs/belbio_api.yaml
+++ b/docs/belbio_api.yaml
@@ -410,7 +410,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorModel'
 
-
   /belstmt/{stmt}/validate:
     get:
       # deprecated: true
@@ -673,6 +672,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorModel'
+
   /terms:
     get:
       summary: Terms
@@ -978,6 +978,54 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorModel'
 
+  /orthologs/{gene_id}:
+    get:
+      summary: Ortholog
+      description: |
+        Get orthologs for given gene_id for all available species
+
+        Example query gene_id=HGNC:AKT1
+        Result: MGI:Akt1, RGD:Akt1
+      tags:
+      - Terminologies
+      operationId: getOrtholog
+      parameters:
+      - name: gene_id
+        in: path
+        required: true
+        description: Gene or Protein ID
+        schema:
+          type: string
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  orthologs:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: string
+                        species_id:
+                          type: string
+                example:
+                  orthologs:
+                    - id: MGI:Akt1
+                      species_id: TAX:10090
+                    - id: RGD:Akt1
+                      species_id: TAX:10116
+        default:
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorModel'
+
   /orthologs/{gene_id}/{species_id}:
     get:
       summary: Ortholog
@@ -1010,8 +1058,10 @@ paths:
               schema:
                 type: object
                 properties:
-                  ortholog:
-                    type: string
+                  orthologs:
+                    type: array
+                    items:
+                      type: string
                 example:
                   orthologs:
                     - SP:Q19LI2
@@ -1090,6 +1140,7 @@ paths:
                     type: string
                 example:
                   version: 0.1.0
+
 components:
   schemas:
 
