--- a/docker/Dockerfile-bel_api-image
+++ b/docker/Dockerfile-bel_api-image
@@ -10,6 +10,8 @@ WORKDIR /app
 COPY ./requirements.txt /app/requirements.txt
 RUN pip install -r /app/requirements.txt
 
+COPY ./api /app
+
 USER api
 
 # https://sebest.github.io/post/protips-using-gunicorn-inside-a-docker-image/
