updated bumpversion cfg

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -5,7 +5,7 @@ tag = True
 
 [bumpversion:file:VERSION]
 
-[bumpversion:file:./bel_lang/__version__.py]
+[bumpversion:file:./api/__version__.py]
 search = version: "{current_version}"
 replace = version: "{new_version}"
 
