--- a/make_docs/belbio_api.yaml
+++ b/make_docs/belbio_api.yaml
@@ -21,7 +21,7 @@ info:
     **Note the Endpoints in the TODO section are only documented and
     not yet implemented**
 
-  version: v0.1.0
+  version: vversion: "0.1.1"
   contact:
     name: whayes@adsworks.com
     url: https://bel.bio
@@ -1089,7 +1089,7 @@ paths:
                   version:
                     type: string
                 example:
-                  version: 0.1.0
+                  version: version: "0.1.1"
 components:
   schemas:
 
